--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
       <div class="introduction">
         <h1 class="h1">Group Chat for Everyone</h1>
         <p class="body">Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.</p>
-        <button class="btn btn-green">Download <span>v1.3</span></button>
-        <button class="btn btn-purple">What is it?</button>
+        <div class="buttons">
+          <button class="btn btn-green">Download <span>v1.3</span></button>
+          <button class="btn btn-purple">What is it?</button>
+        </div>
       </div>
 
       <div class="intermission">
@@ -56,9 +58,11 @@
       </div>
 
       <div class="action">
-        <h1>Experience more together</h1>
-        <p>Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.</p>
-        <button>Download v1.3</button>
+        <img alt="image of woman enjoying music" />
+        <h1 class="h3">Experience more together</h1>
+        <p class="body">Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.</p>
+        <button class="btn btn-purple">Download <span>v1.3</span></button>
+        <div class="veil"></div>
       </div>
     </div>
   </main>
