--- a/index.html
+++ b/index.html
@@ -20,17 +20,25 @@
     <div class="container">
       <img class="logo" src="./assets/logo.svg" alt="logo">
 
-      <img class="hero" src="./assets/tablet/image-hero.png" alt="hero">
-
-      <div class="introduction">
-        <h1 class="h1">Group Chat for Everyone</h1>
-        <p class="body">Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.</p>
-        <div class="buttons">
-          <button class="btn btn-green">Download <span>v1.3</span></button>
-          <button class="btn btn-purple">What is it?</button>
+      <header>
+        <img class="hero" src="./assets/tablet/image-hero.png" alt="hero">
+        
+        <img class="desktop-hero-left" src="./assets/desktop/image-hero-left.png" alt="desktop hero left">
+  
+        <div class="introduction">
+          <h1 class="h1">Group Chat for Everyone</h1>
+          <p class="body">Meet makes it easy to connect with others face-to-face virtually and collaborate across any
+            device.</p>
+          <div class="buttons">
+            <button class="btn btn-green">Download <span>v1.3</span></button>
+            <button class="btn btn-purple">What is it?</button>
+          </div>
         </div>
-      </div>
-
+  
+        <img class="desktop-hero-right" src="./assets/desktop/image-hero-right.png" alt="desktop hero right">
+  
+      </header>      
+      
       <div class="intermission">
         <img src="./assets/line.svg" alt="line">
         <div class="between">01</div>
@@ -45,14 +53,14 @@
 
       <div class="features">
         <h4 class="h4">Built for modern use</h2>
-        <h3 class="h3">Smarter meetings, all in one place</h1>
-        <p class="body">
-          Send messages, share files, show your screen, and record your meetings — all in one
-          workspace. Control who can join with invite-only team access, data encryption, and data export.
-        </p>
+          <h3 class="h3">Smarter meetings, all in one place</h1>
+            <p class="body">
+              Send messages, share files, show your screen, and record your meetings — all in one
+              workspace. Control who can join with invite-only team access, data encryption, and data export.
+            </p>
       </div>
 
-      <div class="intermission">
+      <div class="intermission second">
         <img src="./assets/line.svg" alt="line">
         <div class="between">02</div>
       </div>
